--- a/markup/_scss/sections/_nl-live-score.scss
+++ b/markup/_scss/sections/_nl-live-score.scss
@@ -193,20 +193,29 @@
 	.table-info3 {
 		th,
 		td {
+		
 			padding: 0.5rem;
-			text-align: left;
+			text-align: center;
 
- 			&:nth-child(1) {
-        width: 10%;
-        color: #e48706;
-        text-align: right;
-      }
-      &:nth-child(2) {
-        width: 60%;
-      }
-      &:nth-child(3) {
-        width: 30%;
-      }
+			&:nth-child(1) {
+		        width: 10%;
+		        color: #e48706;
+		      }
+
+		  	&:nth-child(2) {
+		   	 width: 39%;
+		   	 text-align: left;
+		  	}
+		    &:nth-child(3) {
+		      width: 17%;
+		    }
+
+		   	&:nth-child(4) {
+		      width: 17%;
+		    }
+		    &:nth-child(5) {
+		      width: 17%;
+		    }
 		}
 	}
 
@@ -222,6 +231,57 @@
 ---------------------------------------- */
 // override to nl-create-team.scss
 .nl-live-score {
+
+	
+  	.more-teams-button {
+   		text-align: center;
+
+   		a .btn-more-teams-live {
+	    	font-size: 15px;
+	    }
+  	}
+
+	.nl-contest-info-table .table-info1 td .btn {
+	    margin-top: 10px;
+	}
+
+	.rounded-corners {
+		border-top-left-radius:  0.625rem;
+		border-top-right-radius: 0.625rem;
+		border-bottom-left-radius: 0rem;
+		border-bottom-right-radius: 0rem;
+	    overflow: hidden;
+	    -webkit-box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+	    box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+	}
+
+	.orange {
+		color: #e98c0c;
+	}
+
+	.nl-contest-info-table .nl-table-scroll2 {
+		max-height: 34.5rem;
+	}
+
+	.nl-contest-info-table .nl-table-scroll3 {
+		max-height: 23rem;
+	}
+
+	.table-current-contests .table td {
+		padding: 0.25rem 0.25rem;
+	}
+
+	.nl-contest-info-table .table-info4 td, .nl-contest-info-table .table-info4 tr  {
+		padding: 0.25rem;
+	}
+
+	.nl-contest-info-table .table-info4 td:nth-child(1) {
+		text-align: center;
+	}
+
+	.nl-team-button {
+		margin: 0.75rem 0;
+	}
 
 	.small-padding-live-score {
 		padding: 0 5px;
@@ -256,6 +316,7 @@
 
 		&.football {
 			min-height: 400px;
+			margin-top: 60px;
 
 			.nl-player-block { // img shirts
 				max-width: 80px;
@@ -274,20 +335,45 @@
 
 			&:first-child {
 				text-align: left;
+				width: 40%
 			}
 		}
 	}
+
+	.nl-my-teams .nl-team-list-table td:nth-child(2) {
+		text-align: center;
+		width: 20%;
+	}
+
+	.nl-my-teams .nl-team-list-table td:nth-child(3) {
+		text-align: center;
+		width: 20%;
+	}
+
+	.nl-my-teams .nl-team-list-table td:nth-child(4) {
+		text-align: center;
+		width: 20%;
+	}
+}
+
+.rank.margin-top-10 {
+	margin-top: 10px;
 }
 
 .rank {
 	display: flex;
 	background-color: #0f254f;
-  border-radius: .625rem;
-  box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+  	border-radius: .625rem;
+  	box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
 	color: #fff;
 	font-weight: 400;
 	font-size: 16px;
-	margin-bottom: calculateRem(16px);
+	// margin-bottom: calculateRem(16px);
+	margin-bottom: 0rem;
+
+	&.below-teams {
+		width: 100%;
+	}
 
 	&__content {
 		padding: 1rem 1rem 0.375rem 1rem;
@@ -424,6 +510,28 @@
 
 		@media (min-width: 992px) and (max-width: 1680px) {
 			display: block;
+			width: 100%;
+		}
+
+		text-align: center;
+
+		.rank__content {
+			padding: .5rem 1rem 0.375rem 1rem;
+		}
+	}
+
+	&.below-teams {
+		line-height: 1rem;
+		width: 100%;
+		padding: 0 0.75rem;
+
+		.rank__content {
+			padding: .5rem 1rem 0.375rem 1rem;
+			font-size: 13px;
+
+			p {
+				font-size: 13px;
+			}
 		}
 	}
 }
@@ -462,6 +570,25 @@
 
 	}
 }
+
+
+
+.chatbox .nl-contest-info-table .nl-table-scroll2 {
+	@include respond-to (allnotwide) {
+		max-height: 15rem;
+	}
+
+	@include respond-to (handhelds) {
+		max-height: 10rem;
+	}
+}
+
+.nl-live-score .nl-contest-info-table .nl-table-scroll3 {
+	@include respond-to (wide-tablets) {
+		max-height: 29rem;
+	}
+}
+
 .chat {
 	background-color: #fff;
 	min-height: 630px;
@@ -477,6 +604,10 @@
 .nl-live-score-contest-table {
 	padding: 0;
 
+	.nl-info-table-button {
+		min-height: 3.5rem;
+		text-align: center;
+	}
 
 	.visibility-hidden {
 		visibility: hidden;
@@ -514,7 +645,7 @@
 			p {
 				margin: 0;
 				padding: 0;
-				font-size: 10px;
+				font-size: 11px;
 				line-height: 1.2;
 			}
 		}
@@ -543,7 +674,8 @@
 	.table-info4{
 		th,
 		td {
-			font-size: 12px;
+			font-size: 10px;
+			padding: 0.25rem;
 		}
 	}
 
