--- a/markup/_scss/base/_base.scss
+++ b/markup/_scss/base/_base.scss
@@ -21,6 +21,10 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+.orange {
+  color: #df920b;
+}
+
 .nl-m-r-15{
   margin-right: calculateRem(15px);
   @include respond-to(wide-tablets){
