salary and fp orange on fields

--- a/markup/_layouts/_content/_homepage/field-soccer.jade
+++ b/markup/_layouts/_content/_homepage/field-soccer.jade
@@ -21,57 +21,57 @@ div.nl-section.nl-create-team.homepage-field.soccer
 							img(src="assets/img/img-goalkeeper.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
+								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-DL-position(data-position="DL")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
+								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-DR-position(data-position="DR")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
+								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-FLEXL-position(data-position="DL")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
+								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-DM-position(data-position="DM")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
+								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-MM-position(data-position="MM")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
+								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-MR-position(data-position="MR")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
+								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-ML-position(data-position="ML")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
+								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-FLEXR-position(data-position="FLEXR")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
+								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-AL-position(data-position="AL")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
+								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-AR-position(data-position="AR")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
+								p.data.orange <span>12.67</span> <span>$42000</span>
 		div.row
 			div.col-12.col-lg-8.offset-lg-2
 				div.nl-team-list.nl-my-teams.hide
@@ -182,7 +182,7 @@ div.nl-section.nl-create-team.homepage-field.soccer
 												td.pos S
 												td 30
 												td $0
-			div.col-12
+			div.col-12.col-lg-8.offset-lg-2
 				div.nl-team-info
 					div.nl-team-data
 						div.row 
