--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -928,67 +928,67 @@ section.nl-section.nl-players.nl-create-team.soccer
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-DL-position(data-position="DL")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-DR-position(data-position="DR")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-FLEXL-position(data-position="FLEXL")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-DM-position(data-position="DM")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-MM-position(data-position="MM")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-MR-position(data-position="MR")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-ML-position(data-position="ML")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-FLEXR-position(data-position="FLEXR")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-AL-position(data-position="AL")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-AR-position(data-position="AR")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
 
                 div.nl-team-list.nl-my-teams.hide
                     .nl-card-wrapper
