--- a/markup/_layouts/_partials/enter-contest-modal.jade
+++ b/markup/_layouts/_partials/enter-contest-modal.jade
@@ -34,7 +34,7 @@
                             img(src="assets/img/football/img-QB.png" alt="QB")
                             div.nl-player-block--data
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
 
                 div.nl-modal-table
                     table.table.table-striped
