--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -879,55 +879,55 @@ section.nl-section.nl-players.nl-create-team
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-K-position(data-position="K")
                             img(src="assets/img/football/K.png" alt="K")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-LRB-position(data-position="LRB")
                             img(src="assets/img/football/LRB.png" alt="LRB")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-RRB-position(data-position="RRB")
                             img(src="assets/img/football/RRB.png" alt="RRB")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-QB-position(data-position="QB")
                             img(src="assets/img/football/QB.png" alt="QB")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-LWR-position(data-position="LWR")
                             img(src="assets/img/football/LWR.png" alt="LWR")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-RWR-position(data-position="RWR")
                             img(src="assets/img/football/RWR.png" alt="RWR")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-TE-position(data-position="TE")
                             img(src="assets/img/football/TE.png" alt="TE")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-DEF-position(data-position="DEF")
                             img(src="assets/img/helmet-3" alt="logo")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p PATRIOTS
-                                p.data <span>12.67</span> <span>$42000</span>
+                                p.data.orange <span>12.67</span> <span>$42000</span>
 
                 div.nl-team-list.nl-my-teams.hide
                     .nl-card-wrapper
